--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 *.class
+.metadata/
+addressbook-web-tests/.settings/
+addressbook-web-tests/test-output/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
