--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ addressbook-web-tests/test-output/
 *.jar
 *.war
 *.ear
+*.xml
+*.txt
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
