--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .metadata/
 addressbook-web-tests/.settings/
 addressbook-web-tests/test-output/
+addressbook-native-tests/.settings/
+addressbook-native-tests/test-output/
+addressbook-native-tests/lib/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -12,6 +15,7 @@ addressbook-web-tests/test-output/
 *.ear
 *.txt
 *.xml
+*.dll
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
